scss/new_user.scss
div#new-user-greeter {
  $padding_horizontal: rem-calc(42px);
  $padding_bottom: 1rem;

  background-color : $gcl-darkgray;
  padding-top: rem-calc(30px);
  padding-left:  $padding_horizontal;
  padding-right: $padding_horizontal;
  padding-bottom: $padding_bottom;
  margin-bottom: 1rem;

  h1 {
    text-transform: none;
    font-size: 2.2rem;
  }

  p {
    color: white;
  }
  .carousel {
    h2 {
      @extend .red;
    }
    li {
      $pad: rem-calc(30px);
      padding-left: $pad;
      padding-right: $pad;
    }
    height: rem-calc(230px);
  }

  .new-user-progress {
    margin-right: - $padding_horizontal + $padding_bottom;
    text-align: right;

    .next {
      margin: 0;
    }
  }

  #start-using-gcl {
    font-size: rem-calc(14px);
    padding: 1rem;
  }

  label {
    color: white;
  }

  select {
    color: $gcl-midgray;
  }

  .user_info_form {
    button {
      margin-bottom: 0;
      margin-right: - rem-calc(40px);
    }
  }

}





#topics-select {
  ul {
    list-style: none;
    li {
      display: inline-block;
      width: 30%;
      line-height: 1.5rem;
      label {
        line-height: 1;
      }
      label:hover {
        background-color: lighten($gcl-darkgray, 20%);
      }
      input[type="checkbox"] {
        margin: 0;
        padding: 0.2rem;

      }
      :checked, :checked + span {
        background-color: lighten($gcl-darkgray, 30%);
      }
    }
  }
  button { float: right; }
}

.centered-message {
  text-align: center;
}

#new-user-suggestions {
  @include grid-row();

  h1 {
    // text-align: center;
    font-size: 2rem;
    margin-top: 0.5rem;
    margin-bottom: 1.5rem;
  }

  div.see-more {
    text-align: center;
    padding-top: rem-calc(10px);
  }
}

